CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o Update to samtools 0.1.8

    o sortBam sorts a BAM file

BUG FIXES

    o Attempts to parse non-existent local files now generate an error

    o Reads whose last nucleotide overlaps the first of a range are
    now scanned / counted.

    o scanning / counting reads late in large Windows files is fast

    o scanBam tag fields of type 'A' parsed correctly

CHANGES IN VERSION 1.0.0
-----------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o scanBam returns minus-strand reads in the manner presented in
    the BAM file, i.e., as though on the positive strand. This occurs
    in revision 0.1.34

    o readBamGappedAlignments replaces readBAMasGappedAlignments

NEW FEATURES

    o ScanBamParam() accepts 'tag' argument for parsing optional fields

    o BamViews can be used with scanBam, countBam,
    readBamGappedAlignments

BUG FIXES

    o No changes classified as 'bug fixes' (package under active
    development)